# Hck-Video-analyzer

./: .gitignore  README_SETUP.md  kv_writer.py  main_udf.py  pyproject.toml  requirements.txt  server.py  setup.py  setup_env.sh  setup_sidecar.py  sidecar_udf.py  test_mega.py  test_processor.py  trigger_job.py  video_ai.py  worker_sidecar.py
